// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuIcon should render a label 1`] = `
<WithStyles(MenuIcon) label={true}>
  <MenuIcon label={true} classes={{...}} open={false}>
    <div className="RSFMenuIcon-root-1 RSFMenuIcon-withLabel-3">
      <div className="rsf-hamburger" type="button">
        <span className="rsf-hamburger-box">
          <span className="rsf-hamburger-inner" />
        </span>
      </div>
      <div className="RSFMenuIcon-label-4">
        menu
      </div>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;

exports[`MenuIcon should show the close icon when opened 1`] = `
<WithStyles(MenuIcon) open={true}>
  <MenuIcon open={true} classes={{...}} label={true}>
    <div className="RSFMenuIcon-root-1 RSFMenuIcon-active-2 RSFMenuIcon-withLabel-3">
      <div className="rsf-hamburger" type="button">
        <span className="rsf-hamburger-box">
          <span className="rsf-hamburger-inner" />
        </span>
      </div>
      <div className="RSFMenuIcon-label-4">
        menu
      </div>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;

exports[`MenuIcon should show the open icon when closed 1`] = `
<WithStyles(MenuIcon)>
  <MenuIcon classes={{...}} open={false} label={true}>
    <div className="RSFMenuIcon-root-1 RSFMenuIcon-withLabel-3">
      <div className="rsf-hamburger" type="button">
        <span className="rsf-hamburger-box">
          <span className="rsf-hamburger-inner" />
        </span>
      </div>
      <div className="RSFMenuIcon-label-4">
        menu
      </div>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;
